# CodexAdministrator

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  compatibility.json  renderer-addons.json  rustfmt.toml
.agent_memory/: MEMORY.md
.agent_memory/bugs/: codex-plus-custom-install-discovery.md
.agent_memory/decisions/: codex-plus-isolated-owner-contract.md  custom-skill-projection-boundary.md  dual-head-session-continuity-boundary.md  github-publication-freshness-gate.md  goal-intent-sync-boundary.md  isolated-official-desktop-instance.md  model-list-injection-boundary.md  multi-injector-composition-boundary.md  native-model-provider-boundary.md  native-runtime-boundary.md  native-state-import-boundary.md  no-standalone-grok-runtime.md  update-isolation-contract.md
.github/workflows/: ci.yml
assets/: bootstrap.js  model-injection-core.js  model-picker-mount.js  provider-readiness.js  renderer-addon-runtime.js  renderer-api-discovery.js  ui-app.js  ui.html
docs/: ARCHITECTURE.md  COMPATIBILITY.md  HOST_ADAPTERS.md  RUNTIME_ADAPTERS.md  UPDATE_ISOLATION.md
src/: bootstrap.rs  cdp.rs  companion.rs  compatibility.rs  control_protocol.rs  credential_store.rs  direct.rs  grok_control.rs  host.rs  isolation.rs  jsonl.rs  launcher.rs  launcher_settings.rs  lib.rs  main.rs  mode.rs  model_discovery.rs  native_goal_sync.rs  native_model_catalog.rs  native_provider.rs  native_session_continuity.rs  native_session_hook.rs  native_session_watch.rs  native_session_worker.rs  native_skill_sync.rs  native_state_sync.rs  renderer_addons.rs  runtime.rs  runtime_client.rs  runtime_process.rs  startup.rs  supervisor.rs  windows_runtime.rs
src/protocol/: codex.rs  grok.rs  mod.rs
tests/: bootstrap_contract.rs  bootstrap_runtime.test.mjs  cli_contract.rs  codex_live.rs  codex_plus_adapter.rs  codex_protocol.rs  companion_http.rs  compatibility_policy.rs  control_protocol.rs  credential_binding.rs  direct_instance_isolation.rs  direct_launcher_contract.rs  grok_control_broker.rs  grok_protocol.rs  host_adapter_contract.rs  jsonl_transport.rs  launcher_invocation.rs  launcher_settings.rs  loopback_cdp_client.rs  mode_contract.rs  model_discovery.rs  model_injection.test.mjs  model_picker_mount.test.mjs  native_goal_sync.rs  native_model_catalog.rs  native_model_provider.rs  native_session_continuity.rs  native_session_hook.rs  native_session_sync.rs  native_session_watch.rs  native_session_worker.rs  native_skill_sync.rs  provider_readiness.test.mjs  renderer_addon_runtime.test.mjs  renderer_addons.rs  renderer_api_discovery.test.mjs  repository_contract.rs  runtime_adapter_contract.rs  runtime_clients.rs  runtime_probe.rs  (+6 more)
tests/fixtures/: grok-model-catalog.json  host.html
