[package]
name = "codex-administrator"
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.85"
description = "External Grok model-list injection for native ChatGPT/Codex hosts"
license = "Apache-2.0"
repository = "https://github.com/HerobertEinstein/CodexAdministrator"
readme = "README.md"
keywords = ["codex", "grok", "agent", "windows", "launcher"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
http = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml_edit = "0.23"

[dev-dependencies]
tempfile = "3.20"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_JobObjects", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
lto = "thin"
strip = "symbols"
